--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,11 @@ defaults:
       type: pages
     values:
       layout: single
-      author_profile: true
+      author_profile: false
+      toc: true
+      toc_sticky: true
+      sidebar:
+        nav: "central"
 
 category_archive:
   type: liquid
