--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,3 +9,13 @@ main:
     url: /tags/
   - title: "About"
     url: /about/
+
+central:
+  - title: "Overview"
+    children:
+      - title: "Entity"
+        url: /overview/entity/
+      - title: "Rule"
+        url: /overview/rule/
+      - title: "Factory"
+        url: /overview/factory/
