--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,16 +1,20 @@
 main:
-  - title: "Getting Started"
-    url: /gettingstarted/
-  - title: "Posts"
-    url: /posts/
-  - title: "Categories"
-    url: /categories/
-  - title: "Tags"
-    url: /tags/
-  - title: "About"
-    url: /about/
+#  - title: "Getting Started"
+#    url: /gettingstarted/
+#  - title: "Posts"
+#    url: /posts/
+#  - title: "Categories"
+#    url: /categories/
+#  - title: "Tags"
+#    url: /tags/
+#  - title: "About"
+#    url: /about/
 
 central:
+  - title: "Example"
+    children:
+      - title: "Person"
+        url: /example/person/
   - title: "Overview"
     children:
       - title: "Entity"
